--- a/soluciones.qmd
+++ b/soluciones.qmd
@@ -281,7 +281,6 @@ sol02
 La alternativa A1 es la opción más recomendada, ya que resulta óptima en la mayoría de los criterios (3 veces).
 
 Por tanto, Marina debería estudiar el próximo año el Máster en Análisis de Datos.
-
 :::
 
 
@@ -525,6 +524,11 @@ dibuja.criterio.Hurwicz(m_carlos, favorable = FALSE)
 
 ```
 
+
+:::{.callout-tip}
+### Conclusiones: 
+
+
 Observando el gráfico, vemos que:
 
  - ElectroPlus (línea roja) mantiene un coste constante para cualquier valor de alpha.
@@ -534,3 +538,5 @@ Observando el gráfico, vemos que:
  - EcoVolt (línea azul) es la más sensible al valor de alpha: si alpha es bajo (más pesimista), su coste es alto; si alpha es alto (más optimista), su coste baja considerablemente.
 
  Esto indica que EcoVolt solo sería recomendable si Carlos adopta una actitud muy optimista respecto al consumo.
+:::
+
