--- a/soluciones.qmd
+++ b/soluciones.qmd
@@ -615,11 +615,29 @@ El resultado económico (beneficio en miles de euros) depende del estado del mer
 
 Se dispone de la siguiente tabla de pagos (beneficios en miles de euros):
 
-| **Estrategia** | **S1 (Alta demanda)** | **S2 (Demanda media)** | **S3 (Baja demanda)** |
-|:----------------|-----------------:|------------------:|-----------------:|
-| **E1** | 80 | 40 | 10 |
-| **E2** | 100 | 50 | -20 |
-| **E3** | 70 | 60 | 30 |
+```{r}
+# Creamos la matriz de pagos (en miles de euros)
+matriz_pagos <- matrix(c(
+  80, 40, 10,   # E1
+  100, 50, -20, # E2
+  70, 60, 30    # E3
+), 
+nrow = 3,
+byrow = TRUE)
+
+# Convertimos la matriz en un data frame
+tabla_pagos <- as.data.frame(matriz_pagos)
+
+# Asignamos nombres de columnas (estados de la naturaleza)
+colnames(tabla_pagos) <- c("S1", "S2", "S3")
+
+# Asignamos nombres de filas (estrategias)
+rownames(tabla_pagos) <- c("E1", "E2", "E3")
+
+# Mostramos la tabla con estilo
+crea_tabla_estilo(tabla_pagos, TRUE)
+
+```
 
 1.Definimos la tabla de pagos (beneficios en miles de euros)
 
@@ -724,11 +742,32 @@ El beneficio proyectado (en millones de euros) depende del nivel de radiación s
 
 Los beneficios estimados son los siguientes:
 
-| **Localización**            | **S1 (Alta)** | **S2 (Media)** | **S3 (Baja)** |
-|:----------------------------|--------------:|---------------:|--------------:|
-| **L1 (Andalucía)**          |            12 |              8 |             3 |
-| **L2 (Castilla-La Mancha)** |            10 |              9 |             6 |
-| **L3 (Aragón)**             |            11 |              7 |             4 |
+```{r}
+# Creamos la matriz de pagos (beneficios en miles de euros)
+matriz_localizacion <- matrix(c(
+  12, 8, 3,   # L1 (Andalucía)
+  10, 9, 6,   # L2 (Castilla-La Mancha)
+  11, 7, 4    # L3 (Aragón)
+),
+nrow = 3,
+byrow = TRUE)
+
+# Convertimos la matriz en un data frame
+tabla_localizacion <- as.data.frame(matriz_localizacion)
+
+# Asignamos nombres de columnas (estados de la naturaleza)
+colnames(tabla_localizacion) <- c("S1 (Alta)", "S2 (Media)", "S3 (Baja)")
+
+# Asignamos nombres de filas (localizaciones)
+rownames(tabla_localizacion) <- c("L1 (Andalucía)", 
+                                  "L2 (Castilla-La Mancha)", 
+                                  "L3 (Aragón)")
+
+# Mostramos la tabla con estilo 
+crea_tabla_estilo(tabla_localizacion, TRUE)
+
+
+```
 
 
 1.Definimos la tabla de pagos (beneficios en millones de euros)
